<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/undoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo" 
            android:visibility="invisible" />

        <Button
            android:id="@+id/redoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redo" 
        	android:visibility="invisible" />

        <Button
            android:id="@+id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:visibility="invisible" />

        <Button
            android:id="@+id/solveButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/solve" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/back" />
    </LinearLayout>

    <HorizontalScrollView 
        android:id="@+id/HorizontalscrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
    <GridLayout
        android:id="@+id/playfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|fill_horizontal|fill_vertical" >

    </GridLayout>
    </ScrollView>
    </HorizontalScrollView>
    

</LinearLayout>
